ci-pipelines/elk-stack-ci/kibana/kibana-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: kibana
  name: kibana
  namespace: elk-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: kibana
    spec:
      containers:
      - image: docker.elastic.co/kibana/kibana:7.12.1
        name: kibana
        resources:
          requests:
            memory: 1Gi
            cpu: "1"
          limits:
            memory: 2Gi
            cpu: "4"
status: {}
