ci-pipelines/elk-stack-ci/kibana/kibana-service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: kibana
  name: kibana
  namespace: elk-stack
spec:
  ports:
  - name: 5601-5601
    port: 5601
    protocol: TCP
    targetPort: 5601
  selector:
    app: kibana
  type: ClusterIP
status:
  loadBalancer: {}
