ci-pipelines/elk-stack-ci/kibana/ingress.yaml
#managed by opeomotayo
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: elk-stack
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
      - kibana.opeomotayo.net
    secretName: kibana-production-certificate
  rules:
  - host: kibana.opeomotayo.net
    http:
      paths:
      - backend:
          service:
            name: kibana
            port:
              number:  5601
        path: /
        pathType: Prefix
